# example-chainlit-langgraph-azure

./: .env.example  .gitignore  README.md  app.py  entrypoint.py  pyproject.toml
.chainlit/: config.toml
app/: messaging.py
app/commands/: definitions.py  processor.py
app/commands/handlers/: generate_a_report.py  haha.py  send_me_files.py
app/commands/schemas/: base.py
app/starters/: base.py
app/tools/: get_similar_sessions.py  get_weather.py
public/: custom.css
public/reports/: report.txt
